# OS-Project

./: CMakeLists.txt  Makefile  README.md  a.out  fifo.h  main.c  process.c  process_table.txt  results.txt  test.txt
CPU_Scheduling_Algorithms/FIFO/: FIFO.c
CPU_Scheduling_Algorithms/Multilevel/: MultiLevel.c  MultiLevel.h
CPU_Scheduling_Algorithms/Priority/: Priority.c  Priority.h
CPU_Scheduling_Algorithms/RR/: RR.c  RR.h
CPU_Scheduling_Algorithms/SRT/: SRT.c  SRT.h
GanttChart/: GanttChart.c
Queue/: QueueManipulation.c  QueueManipulation.h
